@@ -3,6 +3,8 @@ package io.github.jbellis.brokk;
 import dev.langchain4j.agent.tool.P;
 import dev.langchain4j.agent.tool.Tool;
 import dev.langchain4j.agent.tool.ToolExecutionRequest;
+import dev.langchain4j.agent.tool.ToolSpecification;
+import dev.langchain4j.agent.tool.ToolSpecifications;
 import dev.langchain4j.data.message.ToolExecutionResultMessage;
 import io.github.jbellis.brokk.analyzer.FunctionLocation;
 import io.github.jbellis.brokk.analyzer.ProjectFile;
@@ -10,6 +12,7 @@ import io.github.jbellis.brokk.analyzer.SymbolAmbiguousException;
 import io.github.jbellis.brokk.analyzer.SymbolNotFoundException;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import dev.langchain4j.model.chat.StreamingChatLanguageModel;
 
 import java.io.IOException;
 import java.nio.file.Path;
@@ -25,7 +28,7 @@ import java.util.stream.Collectors;
  *
  * Instead of previewing in bulk, each tool request is parsed with parseToolRequest(...),
  * returning a ValidatedToolRequest (with a recognized ProjectFile, function location, or an error).
- * Then the second pass calls applyRequest(...) to actually do the edit, returning
+ * Then the second pass calls executeTool(...) to actually do the edit, returning
  * a ToolExecutionResultMessage indicating success or failure.
  */
 public class LLMTools {
@@ -48,15 +51,14 @@ public class LLMTools {
      * On success, returns a ValidatedToolRequest with no error; if something
      * can't be resolved, returns one with an error message.
      *
-     * The caller can then apply these edits in a second pass by calling applyRequest(...).
+     * The caller can then apply these edits in a second pass by calling executeTool(...).
      */
     public ValidatedToolRequest parseToolRequest(ToolExecutionRequest request) {
         String toolName = request.name();
         Map<String, Object> argMap;
         try {
             var mapper = new com.fasterxml.jackson.databind.ObjectMapper();
-            argMap = mapper.readValue(request.arguments(), new com.fasterxml.jackson.core.type.TypeReference<>() {
-            });
+            argMap = mapper.readValue(request.arguments(), new com.fasterxml.jackson.core.type.TypeReference<>() {});
         } catch (Exception ex) {
             return ValidatedToolRequest.error(request, "JSON parse error: " + ex.getMessage(), toolName);
         }
@@ -66,13 +68,14 @@ public class LLMTools {
             case "replaceLines" -> parseReplaceLines(request, argMap);
             case "replaceFunction" -> parseReplaceFunction(request, argMap);
             case "removeFile" -> parseRemoveFile(request, argMap);
+            case "explain" -> parseExplain(request, argMap);
             default -> ValidatedToolRequest.error(request, "Unrecognized tool name: " + toolName, toolName);
         };
     }
 
     /**
      * Actually apply a ValidatedToolRequest to the filesystem, returning
-     * a ToolExecutionResultMessage with either "Success" or the error.
+     * a ToolExecutionResultMessage with either "SUCCESS" or an error message.
      */
     public ToolExecutionResultMessage executeTool(ValidatedToolRequest validated) {
         if (validated.error() != null) {
@@ -84,13 +87,15 @@ public class LLMTools {
                 case "replaceLines" -> replaceLines(validated.file(), validated.oldLines(), validated.newLines());
                 case "replaceFunction" -> replaceFunction(validated.functionLocation(), validated.newFunctionBody());
                 case "removeFile" -> removeFile(validated.file());
+                case "explain" -> {
+                    return ToolExecutionResultMessage.from(validated.originalRequest(), validated.explanation());
+                }
                 default -> throw new ToolExecutionException("Unsupported tool: " + validated.originalRequest().name());
             }
         } catch (Exception ex) {
             logger.warn("Tool application error", ex);
-            return ToolExecutionResultMessage.from(validated.originalRequest(), "Failed to apply: " + ex.getMessage());
+            return ToolExecutionResultMessage.from(validated.originalRequest(), "Failed: " + ex.getMessage());
         }
-
         return ToolExecutionResultMessage.from(validated.originalRequest(), "SUCCESS");
     }
 
@@ -99,9 +104,7 @@ public class LLMTools {
     Use this tool to create new files: just provide the full path and content.
     """)
     public void replaceFile(@P("The path of the file to overwrite") String filename, @P("The new file content") String text) {
-        // This annotation-based method is no longer used directly at runtime.
-        // It's replaced by parseToolRequest/applyRequest. If invoked anyway, throw:
-        throw new ToolExecutionException("Direct invocation of replaceFile(String,String) is not supported. Use parseToolRequest + applyRequest.");
+        throw new ToolExecutionException("Direct invocation of replaceFile(String,String) is not supported. Use parseToolRequest + executeTool.");
     }
 
     /**
@@ -125,11 +128,14 @@ public class LLMTools {
     - If you want to move code within a file, use 2 calls: one to remove the old code, and another to add it in the new location.
     - Never call replaceLines with newLines == oldLines, that is just a waste of time!
     """)
-    public void replaceLines(@P("Full path + name of the file to modify") String filename, @P("Lines to replace") String oldLines, @P("Replacement lines (will be used as-is, so make sure indentation is appropriate)") String newLines) {
-        throw new ToolExecutionException("Direct invocation of replaceLines(String,String,String) is not supported. Use parseToolRequest + applyRequest.");
+    public void replaceLines(@P("Full path + name of the file to modify") String filename,
+                             @P("Lines to replace") String oldLines,
+                             @P("Replacement lines (will be used as-is, so make sure indentation is appropriate)") String newLines) {
+        throw new ToolExecutionException("Direct invocation of replaceLines(String,String,String) is not supported. Use parseToolRequest + executeTool.");
     }
 
-    public void replaceLines(ProjectFile file, String oldLines, String newLines) throws EditBlock.NoMatchException, EditBlock.AmbiguousMatchException {
+    public void replaceLines(ProjectFile file, String oldLines, String newLines)
+            throws EditBlock.NoMatchException, EditBlock.AmbiguousMatchException {
         try {
             EditBlock.replaceInFile(file, oldLines, newLines);
             logger.info("replaceLines: updated text in {}", file);
@@ -143,7 +149,7 @@ public class LLMTools {
      */
     @Tool(value = "Remove (delete) a file from the filesystem.")
     public void removeFile(@P("Full path + name of the file to remove") String filename) {
-        throw new ToolExecutionException("Direct invocation of removeFile(String) is not supported. Use parseToolRequest + applyRequest.");
+        throw new ToolExecutionException("Direct invocation of removeFile(String) is not supported. Use parseToolRequest + executeTool.");
     }
 
     /**
@@ -154,27 +160,12 @@ public class LLMTools {
             if (!file.exists()) {
                 throw new ToolExecutionException("File does not exist: " + file);
             }
-
             java.nio.file.Files.delete(file.absPath());
             logger.debug("removeFile: deleted {}", file);
         } catch (IOException e) {
             throw new ToolExecutionException("Failed deleting file " + file + ": " + e.getMessage());
         }
     }
-
-    // this is broken until we have a realtime parser -- otherwise if any other edit changes the target file
-    // before this runs, the line numbers in the Analyzer will be incorrect
-//    /**
-//     * "replaceFunction" - replaces lines from startLine..endLine with new code,
-//     * based on analyzing the function location from the analyzer.
-//     */
-//    @Tool(value = """
-//            Replace the entire function, identified by fullyQualifiedFunctionName + param names. This CANNOT replace a
-//            a class or interface or anything besides functions/methods (you have to use replaceLines or replaceFile for that).
-//            """)
-//    public void replaceFunction(@P("The fully qualified function name, e.g. com.example.Foo.barMethod") String fullyQualifiedFunctionName, @P("List of parameter variable names, e.g. [\"arg1\", \"userId\"]") List<String> functionParameterNames, @P("The new code for the entire function, including signature and braces. Will be used as-is, so make sure indentation is appropriate") String newFunctionBody) {
-//        throw new ToolExecutionException("Direct invocation of replaceFunction(String,List,String) is not supported. Use parseToolRequest + applyRequest.");
-//    }
 
     public void replaceFunction(FunctionLocation loc, String newFunctionBody) {
         // read original file
@@ -233,7 +224,9 @@ public class LLMTools {
             return ValidatedToolRequest.error(req, e.getMessage(), "replaceFile: " + filename);
         }
 
-        return new ValidatedToolRequest(req, pf, null, null, new ValidatedToolRequest.RequestContents(null, null, newText, null), "replaceFile: " + filename);
+        return new ValidatedToolRequest(req, pf, null, null,
+                                        new ValidatedToolRequest.RequestContents(null, null, newText, null, null),
+                                        "replaceFile: " + filename);
     }
 
     /**
@@ -253,7 +246,9 @@ public class LLMTools {
             return ValidatedToolRequest.error(req, e.getMessage(), "removeFile: " + filename);
         }
 
-        return new ValidatedToolRequest(req, pf, null, null, new ValidatedToolRequest.RequestContents(null, null, null, null), "removeFile: " + filename);
+        return new ValidatedToolRequest(req, pf, null, null,
+                                        new ValidatedToolRequest.RequestContents(null, null, null, null, null),
+                                        "removeFile: " + filename);
     }
 
     private ValidatedToolRequest parseReplaceLines(ToolExecutionRequest req, Map<String, Object> argMap) {
@@ -272,16 +267,20 @@ public class LLMTools {
             return ValidatedToolRequest.error(req, e.getMessage(), "replaceLines: " + filename);
         }
         var firstLine = oldLines.split("\n", -1)[0];
-        return new ValidatedToolRequest(req, pf, null, null, new ValidatedToolRequest.RequestContents(oldLines, newLines, null, null), "replaceLines: " + filename + ", " + firstLine + "...");
+        return new ValidatedToolRequest(req, pf, null, null,
+                                        new ValidatedToolRequest.RequestContents(oldLines, newLines, null, null, null),
+                                        "replaceLines: " + filename + ", " + firstLine + "...");
     }
 
     private ValidatedToolRequest parseReplaceFunction(ToolExecutionRequest req, Map<String, Object> argMap) {
         var fullyQualifiedName = (String) argMap.get("fullyQualifiedFunctionName");
-        @SuppressWarnings("unchecked") var paramNames = (List<String>) argMap.get("functionParameterNames");
+        @SuppressWarnings("unchecked")
+        var paramNames = (List<String>) argMap.get("functionParameterNames");
         var body = (String) argMap.get("newFunctionBody");
 
         if (fullyQualifiedName == null || paramNames == null || body == null) {
-            return ValidatedToolRequest.error(req, "replaceFunction requires 'fullyQualifiedFunctionName','functionParameterNames','newFunctionBody'", "replaceFunction: " + (fullyQualifiedName != null ? fullyQualifiedName : "unknown"));
+            return ValidatedToolRequest.error(req, "replaceFunction requires 'fullyQualifiedFunctionName','functionParameterNames','newFunctionBody'",
+                                              "replaceFunction: " + (fullyQualifiedName != null ? fullyQualifiedName : "unknown"));
         }
 
         var analyzer = contextManager.getAnalyzer();
@@ -291,34 +290,40 @@ public class LLMTools {
         try {
             var location = analyzer.getFunctionLocation(fullyQualifiedName, paramNames);
             if (!contextManager.getEditableFiles().contains(location.file())) {
-                return ValidatedToolRequest.error(req, "File for " + fullyQualifiedName + " is not editable: " + location.file(), "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
+                return ValidatedToolRequest.error(req, "File for " + fullyQualifiedName + " is not editable: " + location.file(),
+                                                  "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
             }
-            return new ValidatedToolRequest(req, location.file(), location, null, new ValidatedToolRequest.RequestContents(null, null, null, body), "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
+            return new ValidatedToolRequest(req, location.file(), location, null,
+                                            new ValidatedToolRequest.RequestContents(null, null, null, body, null),
+                                            "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
         } catch (SymbolNotFoundException e) {
-            // 2) if that fails, see if we can match by "className.methodName" ignoring package
             int lastDot = fullyQualifiedName.lastIndexOf('.');
             if (lastDot > 0) {
                 var shortMethod = fullyQualifiedName.substring(lastDot + 1);
-                // So the user typed "com.foo.Bar.baz" but it wasn't found; try ignoring the "com.foo"
-                // We'll just do "Bar.baz" and see how many matches
                 var shortName = fullyQualifiedName.substring(fullyQualifiedName.lastIndexOf('.', lastDot - 1) + 1);
                 var maybeLoc = getFunctionLocationIgnoringPackage(shortName, paramNames);
                 if (maybeLoc.size() == 1) {
                     var loc = maybeLoc.get(0);
                     if (!contextManager.getEditableFiles().contains(loc.file())) {
-                        return ValidatedToolRequest.error(req, "File for " + shortName + " is not editable: " + loc.file(), "replaceFunction: " + shortName + ", " + paramNames);
+                        return ValidatedToolRequest.error(req, "File for " + shortName + " is not editable: " + loc.file(),
+                                                          "replaceFunction: " + shortName + ", " + paramNames);
                     }
-                    return new ValidatedToolRequest(req, loc.file(), loc, null, new ValidatedToolRequest.RequestContents(null, null, null, body), "replaceFunction: " + shortMethod + ", " + paramNames);
+                    return new ValidatedToolRequest(req, loc.file(), loc, null,
+                                                    new ValidatedToolRequest.RequestContents(null, null, null, body, null),
+                                                    "replaceFunction: " + shortMethod + ", " + paramNames);
                 }
                 if (maybeLoc.isEmpty()) {
-                    return ValidatedToolRequest.error(req, "No match found for function " + fullyQualifiedName, "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
+                    return ValidatedToolRequest.error(req, "No match found for function " + fullyQualifiedName,
+                                                      "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
                 }
-                var allFQNs = maybeLoc.stream().map(fl -> fl.file().toString() + " -> " + fl.code()).collect(Collectors.joining("\n"));
-                return ValidatedToolRequest.error(req, "Multiple matches found for " + fullyQualifiedName + ", ignoring package. Candidates:\n" + allFQNs, "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
+                var allFQNs = maybeLoc.stream()
+                        .map(fl -> fl.file().toString() + " -> " + fl.code())
+                        .collect(Collectors.joining("\n"));
+                return ValidatedToolRequest.error(req, "Multiple matches found for " + fullyQualifiedName + ", ignoring package. Candidates:\n" + allFQNs,
+                                                  "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
             }
-
-            // No matches at all
-            return ValidatedToolRequest.error(req, "No match found for function: " + fullyQualifiedName, "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
+            return ValidatedToolRequest.error(req, "No match found for function: " + fullyQualifiedName,
+                                              "replaceFunction: " + fullyQualifiedName + ", " + paramNames);
         }
     }
 
@@ -384,7 +389,7 @@ public class LLMTools {
             }
         }
         if (editableMatches.size() == 1) {
-            return editableMatches.getFirst();
+            return editableMatches.get(0);
         }
         if (editableMatches.size() > 1) {
             throw new SymbolAmbiguousException("No exact match for %s and %s is ambiguous".formatted(filename, fileNameOnly));
@@ -400,10 +405,10 @@ public class LLMTools {
             }
         }
         if (repoMatches.size() == 1) {
-            if (!contextManager.getEditableFiles().contains(repoMatches.getFirst())) {
+            if (!contextManager.getEditableFiles().contains(repoMatches.get(0))) {
                 throw new FileNotEditableException("Matched file in repo, but not editable: " + repoMatches);
             }
-            return repoMatches.getFirst();
+            return repoMatches.get(0);
         }
         if (repoMatches.size() > 1) {
             throw new SymbolAmbiguousException("No exact match for %s and %s is ambiguous".formatted(filename, fileNameOnly));
@@ -413,7 +418,7 @@ public class LLMTools {
     }
 
     /**
-     * An internal exception thrown when a tool fails. The parse or apply logic
+     * An internal exception thrown when a tool fails. The parse or execute logic
      * catches it and packages the message for the user.
      */
     public static class ToolExecutionException extends RuntimeException {
@@ -431,8 +436,11 @@ public class LLMTools {
      * If error() is non-null, the request is invalid.
      * Otherwise, we have at least a non-null file or functionLocation.
      */
-    public record ValidatedToolRequest(ToolExecutionRequest originalRequest, ProjectFile file,
-                                       FunctionLocation functionLocation, String error, RequestContents contents,
+    public record ValidatedToolRequest(ToolExecutionRequest originalRequest,
+                                       ProjectFile file,
+                                       FunctionLocation functionLocation,
+                                       String error,
+                                       RequestContents contents,
                                        String description) {
         /**
          * Convenience factory for error responses.
@@ -442,8 +450,7 @@ public class LLMTools {
         }
 
         /**
-         * Accessors for individual content fields, delegating
-         * to the nested RequestContents.
+         * Accessors for individual content fields, delegating to the nested RequestContents.
          */
         public String oldLines() {
             return contents.oldLines();
@@ -461,15 +468,51 @@ public class LLMTools {
             return contents.newFunctionBody();
         }
 
+        public String explanation() {
+            return contents.explanation();
+        }
+
         /**
          * Single record grouping the various forms of replacement text.
          */
-        public record RequestContents(String oldLines, String newLines, String newFileContent, String newFunctionBody) { }
+        public record RequestContents(String oldLines, String newLines, String newFileContent, String newFunctionBody, String explanation) { }
     }
 
     public static class FileNotEditableException extends RuntimeException {
         public FileNotEditableException(String message) {
             super(message);
         }
+    }
+
+    @Tool(value = "Explain your strategy to the user. Call this before other tools.")
+    public void explain(@P("Explanation") String text) {
+        throw new UnsupportedOperationException("runSession should special case `explain`");
+    }
+
+    private ValidatedToolRequest parseExplain(ToolExecutionRequest req, Map<String, Object> argMap) {
+        var text = (String) argMap.get("text");
+        if (text == null) {
+            return ValidatedToolRequest.error(req, "explain requires 'text'", "explain: ???");
+        }
+        var contents = new ValidatedToolRequest.RequestContents(null, null, null, null, text);
+        var shortDesc = text.substring(0, Math.min(20, text.length())).replace('\n', ' ');
+        return new ValidatedToolRequest(req, null, null, null, contents, "explain: " + shortDesc);
+    }
+
+    /**
+     * Returns the list of ToolSpecifications for this tool set.
+     * If the model does not require emulated tools, the "explain" tool is filtered out.
+     */
+    public List<ToolSpecification> getToolSpecifications(StreamingChatLanguageModel model) {
+        var all = ToolSpecifications.toolSpecificationsFrom(this);
+        if (requiresEmulatedTools(model)) {
+            all = all.stream().filter(spec -> !spec.name().equals("explain")).toList();
+        }
+        return all;
+    }
+
+    public static boolean requiresEmulatedTools(StreamingChatLanguageModel model) {
+        var modelName = Models.nameOf(model);
+        return modelName.toLowerCase().contains("deepseek") || modelName.toLowerCase().contains("gemini") || modelName.toLowerCase().contains("o3-mini");
     }
 }
